# luma_hackathon

./: LICENSE  README.md  app.py  check_db_schema.py  clean_all_dynamic_data.py  clean_conversation_db.py  construction_data.db  copy_data_to_public.sh  list_all_tables.py  restart_flask_server.sh  restart_server.sh  setup.sh  sql_data.db  sql_demo.py  start_react.sh  start_server_and_app.sh  start_webui.sh  upload_demo_data.py
luma_demo_app_0/: package-lock.json  package.json
luma_demo_app_0/flask_server/: app.py  queen_worker.py  requirements.txt  worker.py
luma_demo_app_0/public/: index.html
luma_demo_app_0/src/: App.css  App.js
luma_demo_construction_company/flask_server/: README.md  app.py  db_setup.py  db_tools.py  db_utils.py  portia_worker.py  queen_agent.py  requirements.txt  start_server.sh  worker_agent.py
portia_demo/: README.md  add_new_data.py  construction_data.db  construction_gpt4o_demo.py  custom_tools.py  demo_script.py  requirements.txt  server_log.txt  sql_data.db  sql_demo_example.py  sql_gpt4o_demo.py  test_llm.py  test_worker_ai.py
portia_demo/archive/: portia_simple_llm.py  sql_mcp_client.py  sql_mcp_sse_client.py  sql_server_demo.py
portia_demo/backup/: portia_basic_sql.py  portia_direct.py  portia_with_custom_sql.py  portia_with_gpt4o.py  portia_with_simple_tools.py
portia_demo/backup/sql_mcp_server/: pyproject.toml  requirements.txt  run_sse_server.py
portia_demo/flask_server/: __init__.py  app.py  construction_data.db  init_db.py  simple_app.py  worker_ai.py
portia_demo/sql_demo/: .gitignore  README.md  __init__.py  (+2 more)
(+37 files in other folders)
